--- a/4.GroupsAndAxes/d3.html
+++ b/4.GroupsAndAxes/d3.html
@@ -19,10 +19,16 @@
 								.domain([0,60])
 								.range(["red","blue"])
 
+			var axisX = d3.svg.axis()
+							.ticks(10)//轴上多少个标点
+							.scale(widthScale);
+
 			var canvas = d3.select("body")
 							.append("svg")
 							.attr("width", width)
-							.attr("height",height);
+							.attr("height",height)
+							.append("g")//加一个g标签
+							.attr("transform", "translate(20,0)");
 
 			var bars = canvas.selectAll("rect")
 							.data(dataArray)
@@ -32,6 +38,10 @@
 								.attr("height", 50)
 								.attr("fill", function(d){ return color(d) })
 								.attr("y", function(d, i){ return i*100});
+
+			canvas.append("g")
+					.attr("transform","translate(0, 400)")
+					.call(axisX);
 
 		</script>
 	</body>
